# mailmule

./: .env  Cargo.toml
.sqlx/: query-08fff62dcfff4d897dd77abc3c117166886a2abca9fac695556f6f606184409d.json  query-1fe94814914b388fc65826ab10f354bb92cb395b0994b95faa10102431f84702.json  query-27b369d1a1b9bdffa861130aa8456e9544a831f94880529e69110e6015bb5542.json  query-50a9d3fbc824864e43a850c8002cc55e67f3ebf884e69309f56eaa112025552a.json  query-622328b7911a596d1e6ce5d3e692be62edae283b79d15319954fff74127705db.json  query-65f5a615fa17653f7d93220884ed5e38eb56da59839b1c2ada1aede6e60fdfce.json  query-84472469885d494dd1676bddcfe1332d8ac64e77d6534fc51e9554b3a2efdf49.json  query-8aa413b7854a976957e0f2c737a6761a7b116133546bc7e75123d00ce9ef5e50.json  query-9d4118f83b94909e618d8758d3ae2a8d969541fe391fab39301e610a6d05409f.json  query-a337d2aa83cf9838f345ae1a347ee4af51829ea7d3e183684ab444d45c644d89.json  query-c4d53405c1fcdc671275e2a4a9d524434b63a5e0fc2e2d61a8a79d553a0678d2.json  query-cdaed537d6fe41137419694ee0096867695fd4bff63a9974914b01032537f7d7.json  query-fded2de3a7780793c7846671adb2e00b0cfae02c9021f027cc48913ec2061bd0.json
migrations/: 20230927103339_create_subscribers_table.sql  20230929211804_create_subscription_tokens_table.sql  20231001105234_create_users_table.sql
scripts/: init_db.sh
src/: auth.rs  config.rs  email.rs  helpers.rs  lib.rs  main.rs  publish.rs  subscribe.rs
