[package]
name = "mailmule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-native-tls",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "postgres",
] }
tokio = { version = "1.32.0", features = ["full"] }
