[package]
name = "mailmule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tracing"] }
chrono = "0.4.31"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_with = { version = "3.3.0", features = ["time_0_3"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-native-tls",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "postgres",
] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = ["v4"] }
validator = "0.16.1"
